Fix about.scss spilling styling into other pages

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -22,7 +22,7 @@
   margin: 3rem auto;
 }
 
-section {
+section.about-section {
   margin: 6rem auto;
 }
 
